bigger section title

--- a/docs/upgrading/v5.md
+++ b/docs/upgrading/v5.md
@@ -560,7 +560,7 @@ function App() {
 }
 ```
 
-### Pass `<Link>` state as separate prop
+## Pass `<Link>` state as separate prop
 
 The `Link` component in v6 accepts `state` as a separate prop instead of receiving it as part of the object passed to `to` so you'll need to update your `Link` components if they are using `state`:
 
